--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
 html{
-	scroll-behavior: smooth;
+    scroll-behavior: smooth;
+}
+h1,h2,h3,h4,h5,h6{
+    font-weight:normal;
+    margin:0;
+}
+body{
+}
+.r{
+    border-radius:5px;
 }
 .section{
-	height:100px;
-	border: 1px solid black;
-	border-radius:5px;
-	margin-bottom:5px;
-}
-.vimeo{
-	padding-bottom:60%;
+    border: 1px solid black;
+    margin:5px;
+    padding:5px;
+    max-width:600px;
 }
