--- a/style.css
+++ b/style.css
@@ -1,18 +1,80 @@
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,600;1,400;1,600&display=swap');
 html{
-    scroll-behavior: smooth;
+    background-color:#E8E4DD;
 }
+body{
+    font-family: 'EB Garamond', serif;
+    font-size:18px;
+}
+
 h1,h2,h3,h4,h5,h6{
     font-weight:normal;
     margin:0;
 }
-body{
+a{
+    color:black;
+}
+a:active{
+    color:black;
+}
+a[tabindex]:focus{
+    color:red;
+}
+nav a{
+    padding:0 5px 0 0;
 }
 .r{
     border-radius:5px;
 }
-.section{
-    border: 1px solid black;
+.l{
+    border: 1px solid #AAAAAA;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+.p{
+    padding:0 20px 0px 20px;
+}
+.n{
+    white-space: nowrap;
+}
+.hi{
+    overflow-x:hidden;
+}
+.sc{
+    overflow-x:scroll;
+}
+nav.p{
+    padding:0 20px 10px 20px;
+}
+.s {
+    -moz-box-shadow:    inset 0 0 5px #C6C1BA;
+    -webkit-box-shadow: inset 0 0 5px #C6C1BA;
+    box-shadow:         inset 0 0 5px #C6C1BA;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+.scroll{
+    margin:0;
+    height:400px;
+    width:610px;
+    max-width:100%;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+    overflow-y:scroll;
+    scroll-padding: 10px;
+}
+.block{
+    background-color:white;
     margin:5px;
     padding:5px;
-    max-width:600px;
+    width:600px;
+    max-width:calc(100% - 10px);
+    
+}
+.sticky{
+    position:sticky;
+    bottom:10px;
 }
