--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ nav a{
     overflow:hidden;
 }
 .l{
-    border: 1px solid #AAAAAA;
+    border: 1px solid #F4F4F4;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -70,7 +70,7 @@ nav.p{
     scroll-padding: 5px;
 }
 .block{
-    background-color:white;
+    background-color:#FFFFFF;
     margin:5px;
     padding:5px;
     width:600px;
