--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,600;1,400;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+English:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@0;1&display=swap');
 html{
-    background-color:#FCFCFC;
+    background-color:#FFFFFF;
 }
 body{
     font-family: 'EB Garamond', serif;
+/*    font-family: 'IM Fell English', serif;*/
+/*    font-family: 'IM Fell DW Pica', serif;*/
     font-size:18px;
 }
-
+section{
+/*    margin:0 0 5px 0;*/
+}
 h1,h2,h3,h4,h5,h6{
     font-weight:normal;
     margin:0;
@@ -29,7 +35,7 @@ nav a{
     -webkit-mask-image: -webkit-radial-gradient(white, black);
 }
 .l{
-    border: 1px solid #F4F4F4;
+    border-top: 1px solid black;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -41,15 +47,16 @@ nav.p{
     padding:0 20px 10px 20px;
 }
 .s {
-    -moz-box-shadow:    inset 0 0 5px #C6C1BA;
-    -webkit-box-shadow: inset 0 0 5px #C6C1BA;
-    box-shadow:         inset 0 0 5px #C6C1BA;
+    -moz-box-shadow:    inset 0px -15px 10px -15px #E2E2E2;
+    -webkit-box-shadow: inset 0px -15px 10px -15px #E2E2E2;
+    box-shadow:         inset 0px -15px 10px -15px #E2E2E2;
 }
 .n{
     white-space: nowrap;
 }
 .c{
     padding:0!important;
+}
 }
 .hi{
     overflow:hidden;
@@ -61,24 +68,27 @@ nav.p{
     display: none;
 }
 .scroll{
-    margin:5px;
-    height:400px;
+    /*margin:5px;*/
+    max-height:500px;
     width:600px;
-    max-width:calc(100% - 10px);
+    max-width:100%;
     scroll-behavior: smooth;
     scrollbar-width: none;
     overflow-y:scroll;
     scroll-padding: 5px;
 }
 .block{
-    background-color:#FFFFFF;
-    margin:5px;
+    background-color:transparent;
+    margin:5px 0 0 0;
     padding:5px;
     width:600px;
-    max-width:calc(100% - 10px);
+    max-width:100%;
     
 }
 .sticky{
     position:sticky;
     bottom:10px;
+}
+#home{
+    background-color:#FFFFFF;
 }
