--- a/style.css
+++ b/style.css
@@ -3,19 +3,26 @@
 @import url('https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@0;1&display=swap');
 html{
     background-color:#FFFFFF;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+    overflow-y:scroll;
+    scroll-padding: 5px;
 }
+
 body{
+    height:100%;
+    font-size:18px;
+    line-height:1.5;
     font-family: 'EB Garamond', serif;
 /*    font-family: 'IM Fell English', serif;*/
 /*    font-family: 'IM Fell DW Pica', serif;*/
-    font-size:18px;
-}
-section{
-/*    margin:0 0 5px 0;*/
 }
 h1,h2,h3,h4,h5,h6{
     font-weight:normal;
     margin:0;
+}
+h2{
+    font-style:italic;
 }
 a{
     color:black;
@@ -46,11 +53,6 @@ nav a{
 nav.p{
     padding:0 20px 10px 20px;
 }
-.s {
-    -moz-box-shadow:    inset 0px -15px 10px -15px #E2E2E2;
-    -webkit-box-shadow: inset 0px -15px 10px -15px #E2E2E2;
-    box-shadow:         inset 0px -15px 10px -15px #E2E2E2;
-}
 .n{
     white-space: nowrap;
 }
@@ -67,28 +69,20 @@ nav.p{
 ::-webkit-scrollbar {
     display: none;
 }
-.scroll{
-    /*margin:5px;*/
-    max-height:500px;
-    width:600px;
-    max-width:100%;
-    scroll-behavior: smooth;
-    scrollbar-width: none;
-    overflow-y:scroll;
-    scroll-padding: 5px;
-}
 .block{
-    background-color:transparent;
+    background-color:#FFFFFF;
     margin:5px 0 0 0;
     padding:5px;
     width:600px;
     max-width:100%;
-    
+
 }
-.sticky{
+.footer{
     position:sticky;
-    bottom:10px;
-}
-#home{
+    bottom:0px;
+    padding-bottom:10px;
     background-color:#FFFFFF;
+    z-index:1;
+    max-width:100%;
 }
+
