--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html{
 
 body{
     height:100%;
+    margin:0 5px 0 5px;
     font-size:18px;
     line-height:1.5;
     font-family: 'EB Garamond', serif;
