--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,600;1,400;1,600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=IM+Fell+English:ital@0;1&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@0;1&display=swap');
 html{
-    background-color:#FFFFFF;
+    background-color:white;
     scroll-behavior: smooth;
     scrollbar-width: none;
     overflow-y:scroll;
@@ -15,15 +13,28 @@ body{
     font-size:18px;
     line-height:1.5;
     font-family: 'EB Garamond', serif;
-/*    font-family: 'IM Fell English', serif;*/
-/*    font-family: 'IM Fell DW Pica', serif;*/
 }
 h1,h2,h3,h4,h5,h6{
+    font-size:28px;
     font-weight:normal;
     margin:0;
 }
+h1{
+    margin:0 0 9px 0; 
+}
 h2{
     font-style:italic;
+}
+p{
+    margin:0;
+    hyphens: overflow;
+}
+p+p{
+/*    margin:9px 0 9px 0;*/
+    text-indent: 36px;
+}
+a:last-of-type, p:last-of-type{
+    margin:0 0 18px 0;
 }
 a{
     color:black;
@@ -71,7 +82,7 @@ nav.p{
     display: none;
 }
 .block{
-    background-color:#FFFFFF;
+    background-color:white;
     margin:5px 0 0 0;
     padding:5px;
     width:600px;
@@ -82,7 +93,7 @@ nav.p{
     position:sticky;
     bottom:0px;
     padding-bottom:10px;
-    background-color:#FFFFFF;
+    background-color:white;
     z-index:1;
     max-width:100%;
 }
