--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,600;1,400;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;1,300;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=BIZ+UDMincho&display=swap');
 html{
     background-color:white;
     scroll-behavior: smooth;
@@ -6,17 +8,16 @@ html{
     overflow-y:scroll;
     scroll-padding: 5px;
 }
-
 body{
     height:100%;
     margin:0 5px 0 5px;
-    font-size:18px;
+    font-size:16px;
     line-height:1.5;
-    font-family: 'EB Garamond', serif;
+    font-family: 'BIZ UDMincho', serif;
 }
 h1,h2,h3,h4,h5,h6{
     font-size:28px;
-    font-weight:normal;
+    font-weight:300;
     margin:0;
 }
 h1{
