--- a/style.css
+++ b/style.css
@@ -11,28 +11,39 @@ html{
 body{
     height:100%;
     margin:0 5px 0 5px;
-    font-size:16px;
+    font-size:17px;
     line-height:1.5;
     font-family: 'BIZ UDMincho', serif;
+/*    text-align:justify;
+    text-justify:inter-word;*/
+}
+article{
+    padding:0 20px 0px 20px;
+}
+figure{
+    margin:0 0 18px 0;
+}
+figcaption{
+
+}
+img+img{
 }
 h1,h2,h3,h4,h5,h6{
+    margin:9px 0 0 0; 
     font-size:28px;
     font-weight:300;
-    margin:0;
 }
-h1{
-    margin:0 0 9px 0; 
-}
+
 h2{
     font-style:italic;
 }
 p{
-    margin:0;
+    margin:9px 0 18px 0;
     hyphens: overflow;
 }
-p+p{
-    margin:13.5px 0 13.5px 0;
-/*    text-indent: 36px;*/ 
+
+nav.p{
+    padding:0 0 10px 0;
 }
 a:last-of-type, p:last-of-type{
     margin:0 0 18px 0;
@@ -60,12 +71,6 @@ nav a{
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
 }
-.p{
-    padding:0 20px 0px 20px;
-}
-nav.p{
-    padding:0 20px 10px 20px;
-}
 .n{
     white-space: nowrap;
 }
@@ -79,13 +84,15 @@ nav.p{
 .sc{
     overflow:scroll;
 }
+.printonly{
+    display:none;
+}
 ::-webkit-scrollbar {
     display: none;
 }
 .block{
     background-color:white;
     margin:5px 0 0 0;
-    padding:5px;
     width:600px;
     max-width:100%;
 
@@ -102,4 +109,15 @@ footer{
   article {page-break-after: always;}
   .noprint{display:none;}
   .printonly{display:block;}
+}
+
+.img-about{
+    max-width:40%;
+    display:block;
+    float:right;
+    margin:9px 0 0 15px;
+}
+.img-full{
+    text-align:center;
+    max-width:100%;
 }
