--- a/style.css
+++ b/style.css
@@ -26,6 +26,9 @@ figure{
 figcaption{
 
 }
+img{
+    width:100%;
+}
 img+img{
 }
 h1,h2,h3,h4,h5,h6{
@@ -120,4 +123,7 @@ footer{
 .img-full{
     text-align:center;
     max-width:100%;
+}
+.qr{
+    width:200px;
 }
