Content update 17-10-22 -- fix

--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ footer{
     max-width:40%;
     display:block;
     float:right;
-    margin:9px 0 0 15px;
+    margin:9px 0 18px 15px;
 }
 .img-full{
     text-align:center;
