--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ body{
 /*    text-align:justify;
     text-justify:inter-word;*/
 }
+nav{
+    background: linear-gradient(to left, rgba(0,0,0,0), rgba(0,0,0,1) 20%);
+    background: -webkit-linear-gradient(to left, rgba(0,0,0,0), rgba(0,0,0,1) 20%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 article{
     padding:0 20px 0px 20px;
 }
