--- a/style.css
+++ b/style.css
@@ -17,12 +17,6 @@ body{
 /*    text-align:justify;
     text-justify:inter-word;*/
 }
-nav{
-    background: linear-gradient(to left, rgba(0,0,0,0), rgba(0,0,0,1) 20%);
-    background: -webkit-linear-gradient(to left, rgba(0,0,0,0), rgba(0,0,0,1) 20%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
 article{
     padding:0 20px 0px 20px;
 }
@@ -105,6 +99,15 @@ nav a{
     width:600px;
     max-width:100%;
 
+}
+.gradient{
+    background: linear-gradient(to left, rgba(255,255,255,1), rgba(0,0,0,0) 25%);
+    pointer-events: none;
+    position:absolute;
+    left:0;
+    bottom:0;
+    width:100%;
+    height:50%;
 }
 footer{
     position:sticky;
