--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ p{
 }
 
 nav.p{
-    padding:0 0 10px 0;
+    padding:0 40px 10px 0;
 }
 a:last-of-type, p:last-of-type{
     margin:0 0 18px 0;
@@ -101,7 +101,7 @@ nav a{
 
 }
 .gradient{
-    background: linear-gradient(to left, rgba(255,255,255,1), rgba(0,0,0,0) 25%);
+    background: linear-gradient(to left, rgba(255,255,255,2) 10%, rgba(255,255,255,2) 10%, rgba(0,0,0,0) 25%);
     pointer-events: none;
     position:absolute;
     left:0;
@@ -109,6 +109,7 @@ nav a{
     width:100%;
     height:50%;
 }
+
 footer{
     position:sticky;
     bottom:0px;
