--- a/style.css
+++ b/style.css
@@ -68,6 +68,12 @@ nav a{
     overflow:hidden;
     -webkit-mask-image: -webkit-radial-gradient(white, black);
 }
+.i {
+    padding:56.25% 0 0 0;position:relative;overflow:hidden;
+}
+.i iframe {
+    position:absolute;top:0;left:0;width:100%;height:100%;
+}
 .l{
     border-top: 1px solid black;
     box-sizing: border-box;
